# hashlife-server

./: .gitignore  CMakeLists.txt  README.md  SITest.cpp  hashlife-server.cpp  hashlife-server.h  main.cpp  output_conversion.h  simple_implementation.cpp  simple_implementation.h  simul_proc.cpp  simul_proc.h
static/: index.html  simulator_interface.js  viewer.html
